--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Background Generators</h1>
     <input id="color1" type="color" name="color1" value="#00ff00">
     <input id="color2" type="color" name="color2" value="#ff0000">
-    <h2>Current CSS Background</h2>
+    <h2>This is the Background Color</h2>
     <button id="randBtn">Random</button>
     <h3></h3>
     
